# reachard

./: .clang-format  .clangd  .dockerignore  .envrc  .gersemirc  .gitignore  .neocmake.toml  .sql-formatter.json  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  Dockerfile  NOTICE  README.md  compose.yaml  go.mod  go.sum  main.go  reachard.supp
.reuse/templates/: AGPL-3.0-or-later.jinja2  Apache-2.0.jinja2
cmake/: FindHelpers.cmake  FindcJSON.cmake  Findlibmicrohttpd.cmake  Findlibuv.cmake  Finduthash.cmake  Helpers.cmake
cmd/: command.go  main.go
cmd/internal/: command.go
cmd/reachard/: main.go
cmd/serve/: main.go
database/: database.go  targets.go
database/clickhouse/: check_results.go  database.go  incidents.go  latencies.go  targets.go  types.go
database/clickhouse/schemas/: v0.sql
database/postgresql/: database.go  errors.go  session.go  targets.go  types.go  user.go
database/postgresql/schemas/: v0.sql
database/schemas/: v0.sql
database/types/: types.go
db/: main.go
docker/: entrypoint.sh
generators/: migrations.c
hooks/: pre-commit
server/: checks.go  handler.go  main.go  server.go  session.go  targets.go  targets_id.go
server/handlers/: authorize.go  handler.go  session.go  targets.go  targets_id.go  targets_id_checks.go  targets_id_incidents.go  targets_id_latencies.go
server/handlers/authorize/: index.css  index.html  index.js
src/: CMakeLists.txt  main.c
src/checker/: checker.c  checker.h
src/client/: client.c  client.h  state.c  state.h  targets.c  targets.h  watcher.c  watcher.h
src/database/: database.c  database.h  macros.c  macros.h  migrate.c  migrate.h  migrations.c  migrations.h  targets.c  targets.h
src/database/migrations/: 1.sql  2.sql  3.sql  4.sql
src/env/: env.c  env.h
src/server/: handle.c  handle.h  request.c  request.h  serve.c  server.c  server.h  state.c  state.h
src/server/handle/: targets.c  targets.h
src/utils/: closure.c  closure.h  constants.h
